--- a/settings.gradle
+++ b/settings.gradle
@@ -1,5 +1,7 @@
 rootProject.name = 'demo-spring-cloud-stream-rabbitmq'
 
 include('application:spring-boot-common-super-application')
+include('application:spring-boot-order-application')
+include('application:spring-boot-stock-application')
 
 include('common:system-core')
