--- a/application/spring-boot-order-application/build.gradle
+++ b/application/spring-boot-order-application/build.gradle
@@ -18,7 +18,7 @@ dependencies {
 
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.cloud:spring-cloud-starter-stream-rabbit:3.1.3'
-    implementation 'com.fasterxml.jackson.core:jackson-core:2.12.3'
+    implementation 'com.fasterxml.jackson.core:jackson-core'
 }
 
 test {
