--- a/application/spring-boot-stock-application/build.gradle
+++ b/application/spring-boot-stock-application/build.gradle
@@ -1,25 +1,3 @@
-plugins {
-    id 'java'
-    id 'eclipse'
-    id 'idea'
-    id 'org.springframework.boot'
-    id 'io.spring.dependency-management'
-}
-
-sourceCompatibility = 1.8
-targetCompatibility = 1.8
-
-repositories {
-    mavenCentral()
-}
-
 dependencies {
-    implementation(project(':common:system-core'))
-
-    implementation 'org.springframework.boot:spring-boot-starter-web'
-    implementation 'org.springframework.cloud:spring-cloud-starter-stream-rabbit:3.1.3'
-}
-
-test {
-    useJUnitPlatform()
+    implementation 'org.springframework.cloud:spring-cloud-starter-stream-rabbit'
 }
