refactor: 바인딩이름 변경 (커스텀한 부분 강조)

--- a/application/spring-boot-order-application/src/main/resources/application.properties
+++ b/application/spring-boot-order-application/src/main/resources/application.properties
@@ -5,11 +5,17 @@ spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
 
-spring.cloud.stream.bindings.input-in-0.group=someGroup
+# spring.cloud.stream.bindings.<bindingName>
+# 바인딩 이름 규칙 <functionName> + -in- + <index>
+spring.cloud.stream.bindings.myOrder-in-0.group=myOrderGroup
+spring.cloud.stream.bindings.myOrder-in-0.consumer.batch-mode=true
 
-spring.cloud.stream.bindings.input-in-0.consumer.batch-mode=true
+#spring.cloud.stream.source=myOrder
+#spring.cloud.stream.bindings.myOrder-out-0.producer.error-channel-enabled=true
+#spring.cloud.stream.rabbit.bindings.myOrder-out-0.producer.useConfirmHeader=true
 
-spring.cloud.stream.rabbit.bindings.input-in-0.consumer.enable-batching=true
-spring.cloud.stream.rabbit.bindings.input-in-0.consumer.batch-size=10
-spring.cloud.stream.rabbit.bindings.input-in-0.consumer.receive-timeout=200
+spring.cloud.stream.rabbit.bindings.myOrder-in-0.consumer.auto-bind-dlq=true
+spring.cloud.stream.rabbit.bindings.myOrder-in-0.consumer.batch-size=10
 
+spring.rabbitmq.publisher-confirm-type=correlated
+spring.rabbitmq.publisher-returns=true
