--- a/application/spring-boot-stock-application/src/main/resources/application.properties
+++ b/application/spring-boot-stock-application/src/main/resources/application.properties
@@ -5,11 +5,11 @@ spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
 
-spring.cloud.stream.bindings.input-in-0.group=someGroup
+spring.cloud.stream.bindings.myOrder-in-0.group=myOrderGroup
+spring.cloud.stream.bindings.myOrder-in-0.consumer.batch-mode=true
 
-spring.cloud.stream.bindings.input-in-0.consumer.batch-mode=true
+spring.cloud.stream.rabbit.bindings.myOrder-in-0.consumer.enable-batching=true
+spring.cloud.stream.rabbit.bindings.myOrder-in-0.consumer.batch-size=10
 
-spring.cloud.stream.rabbit.bindings.input-in-0.consumer.enable-batching=true
-spring.cloud.stream.rabbit.bindings.input-in-0.consumer.batch-size=10
-spring.cloud.stream.rabbit.bindings.input-in-0.consumer.receive-timeout=200
-
+#수신 간격, 대기시간(ms), 1000 으로 설정시 1초마다 메세지 수신
+spring.cloud.stream.rabbit.bindings.myOrder-in-0.consumer.receive-timeout=200
