refactor: 불필요한 설정 정리

--- a/application/spring-boot-order-application/src/main/resources/application.properties
+++ b/application/spring-boot-order-application/src/main/resources/application.properties
@@ -8,13 +8,9 @@ spring.rabbitmq.password=guest
 # spring.cloud.stream.bindings.<bindingName>
 # 바인딩 이름 규칙 <functionName> + -in- + <index>
 spring.cloud.stream.bindings.myOrder-in-0.group=myOrderGroup
+
+#배치모드 설정 (메세지를 chunk로 묶어서 처리)
 spring.cloud.stream.bindings.myOrder-in-0.consumer.batch-mode=true
-
-#spring.cloud.stream.source=myOrder
-#spring.cloud.stream.bindings.myOrder-out-0.producer.error-channel-enabled=true
-#spring.cloud.stream.rabbit.bindings.myOrder-out-0.producer.useConfirmHeader=true
-
-spring.cloud.stream.rabbit.bindings.myOrder-in-0.consumer.auto-bind-dlq=true
 spring.cloud.stream.rabbit.bindings.myOrder-in-0.consumer.batch-size=10
 
 spring.rabbitmq.publisher-confirm-type=correlated
