--- a/application/spring-boot-order-application/src/main/resources/application.properties
+++ b/application/spring-boot-order-application/src/main/resources/application.properties
@@ -5,13 +5,14 @@ spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
 
-# spring.cloud.stream.bindings.<bindingName>
-# 바인딩 이름 규칙 <functionName> + -in- + <index>
+# spring.cloud.stream.bindings.{bindingName}
+# bindingName 규칙 : {functionName}-in-{index}
 spring.cloud.stream.bindings.myOrder-in-0.group=myOrderGroup
-
-#배치모드 설정 (메세지를 chunk로 묶어서 처리)
 spring.cloud.stream.bindings.myOrder-in-0.consumer.batch-mode=true
+spring.cloud.stream.rabbit.bindings.myOrder-in-0.consumer.enable-batching=true
 spring.cloud.stream.rabbit.bindings.myOrder-in-0.consumer.batch-size=10
 
-spring.rabbitmq.publisher-confirm-type=correlated
-spring.rabbitmq.publisher-returns=true
+spring.cloud.stream.bindings.myOrderCancel-in-0.group=myOrderGroup
+spring.cloud.stream.bindings.myOrderCancel-in-0.consumer.batch-mode=true
+spring.cloud.stream.rabbit.bindings.myOrderCancel-in-0.consumer.enable-batching=true
+spring.cloud.stream.rabbit.bindings.myOrderCancel-in-0.consumer.batch-size=10
